@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TeacherService {
@@ -24,14 +23,14 @@ public class TeacherService {
         return teacherRepository.findAll()
                 .stream()
                 .map(TeacherMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TeacherResponseDto> getAllTeachersDtoOptimized() {
         return teacherRepository.findAllWithDisciplines()
                 .stream()
                 .map(TeacherMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
